--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-material-dropdown": "git+https://github.com/noway/react-native-material-dropdown.git",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
