--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-calendar-picker": "^7.0.5",
     "react-native-drawer": "^2.5.1",
     "react-native-fa-icons": "^4.1.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-material-dropdown": "git+https://github.com/noway/react-native-material-dropdown.git",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
