--- a/app.json
+++ b/app.json
@@ -4,9 +4,7 @@
     "slug": "Empower",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": ".app/assets/icon.png",
     "splash": {
-      "image": ".app/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,12 +19,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "This app is geared towards the millions of adults who suffer from ADHD. There are around 6.1 million children diagnosed with ADHD in the US alone and while some outgrow it, around 60% of adults are still living with the disorder. It can affect tasks as small as daily routine tasks to more important deadlines or doctor's appointments. I wanted to make an app that anyone can have right in their pockets to remind them to complete these tasks so they can have one less thing to worry about forgetting.",
+    "githubUrl": "https://github.com/Mhurta41/Empower-app"
   }
 }
